--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Changing font colors</title>
 </head>
 
